# cme_md_connector

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/: dashboard.html
docs/: architecture.drawio
src/: affinity.rs  gateway.rs  lib.rs  loadgen.rs  main.rs  metrics.rs  orderbook.rs  pipeline.rs  risk.rs  runner.rs  signal.rs  timing.rs
src/mdp3/: book_refresh.rs  encode.rs  enums.rs  header.rs  mod.rs  packet.rs
src/metrics/: dashboard.rs
tests/: pipeline_e2e.rs
